[gd_scene load_steps=7 format=3 uid="uid://btohas1wyiu2"]

[ext_resource type="Script" uid="uid://busifcdpvmlc2" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Shader" uid="uid://bdhvks3422nnx" path="res://vignette.gdshader" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://c5c16vuj4wper" path="res://art/char/detective.png" id="3_i3pqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i3pqv"]
shader = ExtResource("2_onrkg")
shader_parameter/alpha = 0.535
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oi3di"]
radius = 41.01219

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 141.0319

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4flbx")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_i3pqv")
offset_left = -751.0
offset_top = -433.0
offset_right = 726.0
offset_bottom = 416.0
mouse_filter = 2
color = Color(0.14044744, 0.14044744, 0.14044744, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oi3di")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_4flbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_i3pqv")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
